<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@android:drawable/screen_background_dark"
            android:visibility="visible" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/background"
            android:contentDescription="@string/menubackgroundimage" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/titleText"
            android:layout_width="186dp"
            android:layout_height="90dp"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintStart_toEndOf="@+id/background"
            app:layout_constraintEnd_toStartOf="@+id/background"
            android:visibility="visible"
            android:textSize="36sp" android:textColor="@android:color/darker_gray" android:textAlignment="center"
    />
    <Button
            android:text="@string/enter_dungeon"
            android:layout_width="148dp"
            android:layout_height="78dp"
            android:id="@+id/playButton" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:backgroundTint="@android:color/holo_orange_light" android:backgroundTintMode="multiply"
            android:background="@android:color/darker_gray" app:layout_constraintStart_toEndOf="@+id/background"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/background"
            style="@android:style/Widget.Holo.Button" android:hapticFeedbackEnabled="true"
            android:textColor="@android:color/background_dark"/>
    <Button
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsButton" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/playButton" app:layout_constraintStart_toEndOf="@+id/background"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/background"
            android:backgroundTint="@android:color/holo_orange_light" android:background="@android:color/darker_gray"
            android:backgroundTintMode="multiply"/>
    <Switch
            android:text="Admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adminToggle" app:layout_constraintStart_toEndOf="@+id/background"
            app:layout_constraintEnd_toStartOf="@+id/background"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/settingsButton"
            tools:text="Admin" android:textColor="@android:color/white" android:textStyle="bold" tools:checked="true"/>
</android.support.constraint.ConstraintLayout>