<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activities.DungeonActivity"
		android:screenOrientation="landscape"
		android:orientation="horizontal">

	<com.example.intotheabyss.game.GameView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/gView"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/debugString" tools:text="@string/debug_string"
			android:textColor="@color/colorAccent" android:textStyle="bold" android:visibility="invisible"
			android:textSize="18sp" android:layout_above="@+id/gView" android:layout_marginBottom="-43dp"
			android:layout_marginEnd="302dp" android:layout_alignEnd="@+id/gView"/>
</RelativeLayout>
